testsuite/tests/ghc-regress/parser/should_fail/readFail045.hs
{-# LANGUAGE NewQualifiedOperators #-}
-- tests for new qualified operator syntax

module ShouldFail where

add x y = x `Prelude.+` y
