testsuite/tests/ghc-regress/parser/should_fail/readFail045.stderr

readFail045.hs:1:14:
    Warning: -XNewQualifiedOperators is deprecated: The new qualified operator syntax was rejected by Haskell'

readFail045.hs:6:21: parse error on input `.+'
